Fix bug 2 - problem with the image align

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -8,6 +8,7 @@
 
 .gh-username img{
   width: 32px;
+  transform: translateY(0.5em);
 }
 
 #profile-bio{
